add:✨クラスターAPIエンドポイント仕様追加(#6)
